--- a/Breast_Cancer_Classification_using_Machine_Learning.ipynb
+++ b/Breast_Cancer_Classification_using_Machine_Learning.ipynb
@@ -6,7 +6,7 @@
       "name": "Breast Cancer Classification using Machine Learning.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNZNZwOLv3kiN+9r0fswDpx",
+      "authorship_tag": "ABX9TyNkjnO6gF9Rp8p0zAGxTf34",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2012,10 +2012,57 @@
     {
       "cell_type": "code",
       "source": [
+        "input_data = (13.08,15.71,85.63,520,0.1075,0.127,0.04568,0.0311,0.1967,0.06811,0.1852,0.7477,1.383,14.67,0.004097,0.01898,0.01698,0.00649,0.01678,0.002425,14.5,20.49,96.09,630.5,0.1312,0.2776,0.189,0.07283,0.3184,0.08183)\n",
+        "\n",
+        "# change the input data to a numpy array\n",
+        "input_data_as_numpy_array = np.asarray(input_data)\n",
+        "\n",
+        "#reshape the numpy array as we are predicting for one datapoint\n",
+        "input_data_reshaped = input_data_as_numpy_array.reshape(1,-1)\n",
+        "\n",
+        "prediction = model.predict(input_data_reshaped)\n",
+        "print(prediction)\n",
+        "\n",
+        "if (prediction[0]==0):\n",
+        "  print ('The Breast Cancer is Malignant')\n",
+        "\n",
+        "else:\n",
+        "  print ('The Breast Cancer is Benign')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mmXg4DObkljx",
+        "outputId": "7604fb69-3d2d-4ced-9acd-c5bfa9ee0db8"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1]\n",
+            "The Breast Cancer is Benign\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:451: UserWarning: X does not have valid feature names, but LogisticRegression was fitted with feature names\n",
+            "  \"X does not have valid feature names, but\"\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         ""
       ],
       "metadata": {
-        "id": "mmXg4DObkljx"
+        "id": "D029I1XKnFGz"
       },
       "execution_count": null,
       "outputs": []
